noinst_LIBRARIES = libsumostatic.a

libsumostatic_a_SOURCES = Edge.cpp \
Edge.h \
Helper.cpp \
Helper.h \
InductionLoop.cpp \
InductionLoop.h \
Junction.cpp \
Junction.h \
Lane.cpp \
Lane.h \
LaneArea.cpp \
LaneArea.h \
MultiEntryExit.cpp \
MultiEntryExit.h \
POI.cpp \
POI.h \
Person.h \
Person.cpp \
Polygon.h \
Polygon.cpp \
Route.h \
Route.cpp \
Simulation.h \
Simulation.cpp \
Subscription.h \
TraCIDefs.h \
TrafficLight.h \
TrafficLight.cpp \
Vehicle.h \
Vehicle.cpp \
VehicleType.h \
VehicleType.cpp

EXTRA_DIST = libsumo.i
